--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc
+    url: jdbc:mysql://localhost:3306/AibasedHelpdeskdb?useSSL=false&serverTimezone=UTC
     username: root
     password: AAaa@123
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -8,7 +8,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-      dialect: org.hibernate.dialect.MySQL8Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
 
   ai:
