Setup google genAi and implemented

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,18 +8,38 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.MySQLDialect
     show-sql: true
-
+#Gemini ai config
   ai:
-    ollama:
-      base-url: http://localhost:11434
+    google:
+      genai:
+        api-key: ${API_KEY}
+        chat:
+          options:
+            model: gemini-2.5-flash
+#            model: gemini-3-pro-preview
+            temperature: 0.7
+#            output token
+#            max-output-tokens: 2000
 
 
 
 
   application:
     name: Ai-Based-Helpdesk
+
+
+# Server port config
+server:
+  port: 8082
+
+logging:
+  level:
+    org:
+      springframework:
+        ai:
+          chat:
+            client:
+              advisor: DEBUG
 
