--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,8 @@ build/
 !**/src/test/**/build/
 
 ### VS Code ###
-.vscode/
-appliacation.yml
+.vscode
+
+application.yml
+src/main/resources/application.yml
+
